--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ body {
 	background-image: url("https://vivaldi.com/wp-content/uploads/The_Pomodoro_timer_in_Vivaldi_browser-980x551.png");
 	background-repeat: no-repeat;
 	height: fit-content;
-	width:100%;
+	width:1000px;
 	color:darkred;
 	text-align: center;
 	align-content: center;
-	padding-left: 23%;
+	padding-left: 36%;
 	background-color: lightcoral;
 }
 
@@ -33,6 +33,12 @@ body {
 	/* align-content: center; */
 	padding-top: 30px;
 	margin-top: 30px;
+}
+
+#contactid {
+	background-image: url("https://png.pngtree.com/background/20220726/original/pngtree-minimal-lifestyle-background-aesthetic-backgrounds-picture-image_1807556.jpg");
+	margin-top: 30px;
+
 }
 
 #tasklist {
